ContentRegistry, HeroRecalculationService, EquipmentService